--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Dating</string>
+
+    <!-- Registration -->
+
+    <string name="email_registration_cta">Register with email</string>
+    <string name="phone_registration_cta">Register with phone</string>
+    <string name="already_registered_cta">Already have an account?</string>
+
 </resources>
