--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="phone_registration_cta">Register with phone</string>
     <string name="already_registered_cta">Already have an account?</string>
 
+    <!-- Bottom navigation, TLDs -->
+
+    <string name="explore">Explore</string>
+    <string name="matches">Matches</string>
+    <string name='profile'>Profile</string>
+
+    <!-- Other navigation -->
+
+    <string name="settings">Settings</string>
+    <string name="notifications">Notifications</string>
 </resources>
