--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="registration_password_label">Create a password</string>
     <string name="registration_next">@string/next</string>
     <string name="registration_back">@string/back</string>
+    <string name="registration_create_account_heading">Nice to meet you!</string>
+    <string name="registration_login_heading">Welcome back!</string>
 
     <string name="error_email_or_phone_invalid">Enter a valid email or phone number.</string>
     <string name="error_already_registered">This account is already registered.</string>
