--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,33 @@
     <string name="error_onboarding_generic">Hmm… something went wrong. Give it another try.</string>
     <string name="error_onboarding_max_selections_exceeded">Slow down! You\'ve selected too many options.</string>
 
+    <!-- Onboarding Questions -->
+
+    <string name="onboarding_q_name">What\'s your name?👋</string>
+    <string name="onboarding_q_birthday">When were you born?🗓️</string>
+    <string name="onboarding_q_gender">How do you identify?👤</string>
+    <string name="onboarding_q_seeking">What are you looking for?🔎</string>
+    <string name="onboarding_q_mbti">Whats your personality type?✨</string>
+
+    <!-- Gender option labels -->
+
+    <string name="gender_male">Male</string>
+    <string name="gender_female">Female</string>
+    <string name="gender_nonbinary">Non binary</string>
+
+    <!-- Dating preference labels -->
+
+    <string name="seeking_friends">Friends ☺️</string>
+    <string name="seeking_fwb">FWB 😏</string>
+    <string name="seeking_casual">Something casual 😘</string>
+    <string name="seeking_dating">Exclusive dating 🥰</string>
+    <string name="seeking_ltr">Long term relationship ❤️</string>
+    <string name="seeking_marriage">Wedding bands 💍</string>
+
+    <!-- Personality type -->
+
+    <string name="mbti_not_sure">Not sure</string>
+
     <!-- Bottom navigation, TLDs -->
 
     <string name="explore">Explore</string>
