Added error/null values for user data enums
Made UserData properties non null.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,8 @@
     <string name="seeking_ltr">Long term relationship ❤️</string>
     <string name="seeking_marriage">Wedding bands 💍</string>
 
+    <string name="error_missing_property">Unspecified</string>
+
     <!-- Bottom navigation, TLDs -->
 
     <string name="explore">Explore</string>
