--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Dating</string>
+    <string name="app_name">NADA</string>
+    <string name="app_subtitle">Not Another Dating App</string>
 
     <!-- Common -->
 
